apps/traefik/garage-webui-endpoint.yml
apiVersion: v1
kind: Service
metadata:
  name: nietzsche-s3-external
  namespace: traefik
spec:
  type: ExternalName
  externalName: nietzsche-s3.ison-mirfak.ts.net
  ports:
    - protocol: TCP
      port: 3909
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: s3-ingress
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.oisd.io`)
      kind: Rule
      services:
        - name: nietzsche-s3-external
          namespace: external-services # Cross-namespace reference
          port: 3909
          scheme: http
  tls:
    certResolver: letsencrypt
